0.20 2018-02-27
        - Fix secure flag to accept https scheme when
          provided by URL.
        - Update link to ULD information.

0.19 2016-07-21
        - Fixed support for Mojolicious 7.

0.18 2015-05-26
        - Updated to support new URL escaping in Mojolicious.

0.17 2015-04-18
        - Fixed dependency.

0.16 2015-04-18
        - Update for Mojolicious 6.

0.15 2014-08-18
        - Clear up documentation.

0.14 2014-06-04
        - Compatible with Mojolicious >= 5.0.

0.13 2014-04-11
        - Make it coherent Artistic License 2.0.

0.12 2013-05-20
        - Fixed Mojolicious 4.0 compatibility.

0.11 2013-04-03
        - Improved test suite.
	- Fixed non-blocking helper.

0.10 2013-03-04
        - Delete mentioning api_test in documentation.
	- Declare 'opt-out' and 'opt-out-url' as EXPERIMENTAL.
	- Introduce piwik_api_url helper as EXPERIMENTAL.
        - Improve documentation.
	- Fix POD error.

0.09 2013-03-01
	- Update year.
 	- Update comments.
        - Documentation tweaks.
	- First implementation of Tracking API.
	- Add opt-out iframe.
	- Add opt-out-link tag.
	- Improve documentation.

0.08 2012-12-02
	- Fixed documentation.

0.07 2012-12-01
        - Fixed license information on CPAN.
	- Fixed Changes documentation.

0.06 2012-12-01
        - Bugfixing piwik_api.
	- Further tests for api and live testing.
	- Improvement of documentation.
	- Added MANIFEST.
	- Preparation for CPAN release.

0.05 2012-11-01
        - Bugfixing piwik_api.

0.04 2012-10-21
        - Updated piwik script tag for noscript option.

0.03 2012-10-02
        - Updated piwik script tag.

0.02 2012-07-16
        - Changed piwik to piwik_tag.
	- Added piwik_api helper.

0.01 2012-07-15
        - Initial submission to GitHub.