@@ -2,6 +2,7 @@
         - Fix secure flag to accept https scheme when
           provided by URL.
         - Update link to ULD information.
+        - Support https in case base URL is https.
 
 0.19 2016-07-21
         - Fixed support for Mojolicious 7.
